--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "phaser": "^3.70.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@playwright/test": "^1.53.1",
+    "babel-jest": "^30.0.4",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
